@@ -15,6 +15,11 @@
     .col-sm-10
       = text_field_tag :ref, params[:ref], placeholder: 'master', required: true, tabindex: 2, class: 'form-control'
       .light Branch name or commit SHA
+  .form-group
+    = label_tag :message, 'Message', class: 'control-label'
+    .col-sm-10
+      = text_field_tag :message, nil, placeholder: 'Enter message.', required: false, tabindex: 3, class: 'form-control'
+      .light (Optional) Entering a message will create an annotated tag.
   .form-actions
     = submit_tag 'Create tag', class: 'btn btn-create', tabindex: 3
     = link_to 'Cancel', project_tags_path(@project), class: 'btn btn-cancel'
