@@ -23,12 +23,29 @@ describe API::API, api: true  do
   end
 
   describe 'POST /projects/:id/repository/tags' do
-    it 'should create a new tag' do
-      post api("/projects/#{project.id}/repository/tags", user),
-           tag_name: 'v2.0.0',
-           ref: 'master'
-      response.status.should == 201
-      json_response['name'].should == 'v2.0.0'
+    context 'lightweight tags' do
+      it 'should create a new tag' do
+        post api("/projects/#{project.id}/repository/tags", user),
+             tag_name: 'v1.0.0',
+             ref: 'master'
+
+        response.status.should == 201
+        json_response['name'].should == 'v1.0.0'
+      end
+    end
+    context 'annotated tag' do
+      it 'should create a new annotated tag' do
+        post api("/projects/#{project.id}/repository/tags", user),
+             tag_name: 'v1.0.0',
+             ref: 'master',
+             message: 'tag message'
+
+        response.status.should == 201
+        json_response['name'].should == 'v1.0.0'
+        # The message is not part of the JSON response.
+        # Additional changes to the gitlab_git gem may be required.
+        # json_response['message'].should == 'tag message'
+      end
     end
 
     it 'should deny for user without push access' do
